2005-10-31  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.c: No need to pass around our GladeXML
	since its a static global

2005-10-31  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.c: The dialog shouldn't have two labels
	reading 'Password:' so make the primary one have better text.

2005-10-29  Christopher Aillon  <caillon@redhat.com>

	* configure.ac:
	* src/Makefile.am:
	* src/krb5-auth-dialog.c: Use libnm-glib for NetworkManager support
	instead of the NetworkManager D-BUS API.

2005-10-29  Christopher Aillon  <caillon@redhat.com>

	* src/krb5-auth-dialog.c: Reformat using tabs instead of spaces

2004-09-07  Christopher Aillon  <caillon@redhat.com>
	* src/krb5-auth-dialog.c: Check whether we are running in a
	kerberos environment before entering the timeout to see when
	the tickets expire.

	* src/krb5-auth-dialog.c: Use g_get_user_name and other code
	cleanup.

2004-09-02  Colin Walters  <walters@verbum.org>

	* configure.in: Check for NetworkManager.

	* Makefile.am: Add NETWORKMANAGER_LIBS.

	* src/krb5-auth-dialog.c (am_online): New function,
	uses NetworkManager over D-BUS to determine
	whether or not we're online.

	* src/krb5-auth-dialog.c (credentials_expiring): Don't
	try to renew credentials if we're not online.

2004-08-28  Diego Gonzalez  <diego@pemas.net>

	* configure.ac: add --with-heimdal
	* krb5-auth-dialog.c: modify to support heimdal if enabled
	* krb5-auth-dialog.glade: center the dialog

2004-08-19  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Added «nb» and «no» to ALL_LINGUAS.

2004-08-18  Christopher Aillon  <caillon@redhat.com>

	* configure.ac: New version

	* src/krb5-auth-dialog.c: Display status text for bad passwords
	and display remaining time until expiry	

Tue Aug 17 15:27:33 2004  Jonathan Blandford  <jrb@redhat.com>

	* src/krb5-auth-dialog.c: Use gettext

	* src/dummy-strings.c: Kerberos error messages to translate.
